Infra/kubernetes/app/04-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop
  namespace: shop
  labels:
    app: shop
spec:
  selector:
    app: shop
  ports:
    - port: 9000          # port exposed outside ClusterIP
      targetPort: 9000
      protocol: TCP
